# xray-server-remote-setup

./: .env.example  .gitignore  README.md  config.json  docker-compose.yml  fabfile.py  init-keys.sh  nginx-acme.conf  pyproject.toml
