[tool.poetry]
name = "xray-deploy"
version = "0.1.0"
description = "Deployment automation for xray-server"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fabric = "^3.2"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
